# job-search-copilot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.sh
config/: profile.yaml
dashboard/: app.py
docs/: ARCHITECTURE.md  PLATFORMS.md  TROUBLESHOOTING.md  USAGE.md
scripts/: info.py
src/: __init__.py  config.py  types.py
src/ai/: engine.py
src/output/: atomic_io.py  report.py  tracker.py
src/search/: dedup.py
src/utils/: browser.py
tests/: conftest.py  test_atomic_io.py  test_config.py  test_dedup.py  test_types.py
